# routes/web.php
@@ -16,5 +16,4 @@ use Illuminate\Support\Facades\Route;
 Route::get('/', function () {
     return view('welcome');
 });
-Route::get('/xd/', 'TipoDocumento\TipoDocumentoController@docs')->name('xd');
 
